# android-remote

./: .project  AndroidManifest.xml  Makefile.am  README.txt
.externalToolBuilders/: SSRClientAppVersionInfo.launch
assets/: AppVersionInfo.xml
release/: Android-SSR-Remote-v1.0.1-2011-03-07.apk  Android-SSR-Remote-v1.0.2-2011-05-02.apk  Android-SSR-Remote-v1.0.3-2011-05-04.apk
res/layout/: connector.xml  connector_help_dialog.xml  sources_mover.xml
res/values/: colors.xml  strings.xml
src/de/tlabs/ssr/g1/client/: AudioScene.java  ConnectThread.java  Connector.java  CustomSeekBar.java  Entity.java  GlobalData.java  Loudspeaker.java  Reference.java  SoundSource.java  SourcesMover.java  SourcesView.java  TimedInterpolator.java  XMLChunkInputStream.java  XmlInputThread.java
src/de/tub/tlabs/android/utils/: AppVersionInfo.java  DialogHelper.java  FirstOrderLPFilter.java  FirstOrderOrientationLPFilter.java  ObjectPool.java  StringHelper.java
