## This file controls which Android source files end up in the SSR tarball.

## $Id$

nobase_dist_noinst_DATA = \
	.classpath \
	.project \
	AndroidManifest.xml \
	README.txt \
	default.properties \
	.externalToolBuilders/SSRClientAppVersionInfo.launch \
	assets/AppVersionInfo.xml \
	res/drawable/bigger.png \
	res/drawable/button_background.xml \
	res/drawable/close.png \
	res/drawable/help.png \
	res/drawable/icon.png \
	res/drawable/pause.png \
	res/drawable/play.png \
	res/drawable/rewind.png \
	res/drawable/smaller.png \
	res/drawable-hdpi/bigger.png \
	res/drawable-hdpi/help.png \
	res/drawable-hdpi/pause.png \
	res/drawable-hdpi/play.png \
	res/drawable-hdpi/rewind.png \
	res/drawable-hdpi/smaller.png \
	res/layout/connector_help_dialog.xml \
	res/layout/connector.xml \
	res/layout/sources_mover.xml \
	res/values/colors.xml \
	res/values/strings.xml \
	src/de/tlabs/ssr/g1/client/AudioScene.java \
	src/de/tlabs/ssr/g1/client/Connector.java \
	src/de/tlabs/ssr/g1/client/ConnectThread.java \
	src/de/tlabs/ssr/g1/client/CustomSeekBar.java \
	src/de/tlabs/ssr/g1/client/Entity.java \
	src/de/tlabs/ssr/g1/client/GlobalData.java \
	src/de/tlabs/ssr/g1/client/Loudspeaker.java \
	src/de/tlabs/ssr/g1/client/Reference.java \
	src/de/tlabs/ssr/g1/client/SoundSource.java \
	src/de/tlabs/ssr/g1/client/SourcesMover.java \
	src/de/tlabs/ssr/g1/client/SourcesView.java \
	src/de/tlabs/ssr/g1/client/TimedInterpolator.java \
	src/de/tlabs/ssr/g1/client/XMLChunkInputStream.java \
	src/de/tlabs/ssr/g1/client/XmlInputThread.java \
	src/de/tub/tlabs/android/utils/AppVersionInfo.java \
	src/de/tub/tlabs/android/utils/DialogHelper.java \
	src/de/tub/tlabs/android/utils/FirstOrderLPFilter.java \
	src/de/tub/tlabs/android/utils/FirstOrderOrientationLPFilter.java \
	src/de/tub/tlabs/android/utils/ObjectPool.java \
	src/de/tub/tlabs/android/utils/StringHelper.java \
	tools/AndroidAppVersionInfo.jar

dist-hook:
	mkdir $(distdir)/gen
